update preview with DOC-351 and DOC-353
update preview with DOC-351 and DOC-353

--- a/platforms/ios-swift/module-list/location/index.html
+++ b/platforms/ios-swift/module-list/location/index.html
@@ -290,11 +290,7 @@ var utag_data = {
 <p>The following platforms are supported:</p>
 
 <ul>
-<li><a href="/platforms/ios-swift/">iOS</a> 2.0+</li>
-<li><a href="/platforms/ios-objective-c/tvos/">tvOS</a> 9.0+</li>
-<li><a href="/platforms/ios-objective-c/watchos/">watchOS</a> 2.0+</li>
-<li>macOS 10.6+</li>
-<li>Mac Catalyst 13.0+ beta</li>
+<li><a href="/platforms/ios-swift/">iOS</a></li>
 </ul>
 
 <h2 id="requirements">Requirements</h2>
@@ -1615,7 +1611,7 @@ If a user is within a geofence at the time of creation, the <code>&quot;enter&qu
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 20, 2020 
+    <span>This page was last updated:  March 12, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
