--- a/platforms/javascript/index.html
+++ b/platforms/javascript/index.html
@@ -1502,7 +1502,7 @@ var utag_data = {
 
     <div class="lh-copy mid-gray links">
       
-          Reference guide for classes and methods provided by Tealium for JavaScript (Web).
+          Reference guide for utility functions provided by the Universal Tag (utag.js).
         
     </div>
     </a>
