--- a/platforms/remote-commands/integrations/index.html
+++ b/platforms/remote-commands/integrations/index.html
@@ -1326,7 +1326,7 @@ var utag_data = {
       <a href="/platforms/remote-commands/integrations/braze/" class="link primary-color dim">
     
 
-    <div class="f3">Remote Command: Braze (Beta)</div>
+    <div class="f3">Remote Command: Braze</div>
 
     <div class="lh-copy mid-gray links">
       
