update from master
update from master

--- a/platforms/android-java/index.html
+++ b/platforms/android-java/index.html
@@ -1483,7 +1483,7 @@ var utag_data = {
 
     <div class="lh-copy mid-gray links">
       
-          Reference guide for classes and methods provided by Tealium for Android.
+          Reference guide for classes and methods provided by Tealium for Android (Java).
         
     </div>
     </a>
