--- a/platforms/ios-swift/module-list/collect/index.html
+++ b/platforms/ios-swift/module-list/collect/index.html
@@ -301,7 +301,7 @@ var utag_data = {
 
 <h3 id="carthage">Carthage</h3>
 
-<p>To install the AutoTracking module with Carthage, following these steps:</p>
+<p>To install the Collect module with Carthage, following these steps:</p>
 
 <ol>
 <li><p>Go to the app target&rsquo;s General configuration page in Xcode.</p></li>
@@ -1459,7 +1459,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 23, 2020 
+    <span>This page was last updated:  March 18, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
