update from master
update from master

--- a/platforms/cordova/install/index.html
+++ b/platforms/cordova/install/index.html
@@ -291,8 +291,8 @@ var utag_data = {
 <p>The plugin includes the following Tealium libraries:</p>
 
 <ul>
-<li><a href="/platforms/ios-objective-c/">Tealium for iOS</a> (5.3.2+)</li>
-<li><a href="/platforms/android-java/">Tealium for Android</a> (5.4.2+)</li>
+<li><a href="/platforms/ios-objective-c/">Tealium for iOS</a></li>
+<li><a href="/platforms/android-java/">Tealium for Android</a></li>
 </ul>
 
 <p class="note">As of version 1.1.1+, framework files are no longer included in the plugin. Instead, the respective dependency managers are used for iOS and Android.</p>
@@ -1512,7 +1512,7 @@ constructor(<span style="font-weight:bold">private</span> tealium<span style="fo
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  March 2, 2020 
+    <span>This page was last updated:  March 16, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
