--- a/platforms/cordova/release-notes/index.html
+++ b/platforms/cordova/release-notes/index.html
@@ -234,7 +234,9 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-1-1">Version 1.1.1</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-1-3">Version 1.1.3</a></li>
+              <li><a href="#version-1-1-2">Version 1.1.2</a></li>
+              <li><a href="#version-1-1-1">Version 1.1.1</a></li>
               <li><a href="#version-1-1-0">Version 1.1.0</a></li>
               </nav>
   </aside></div>
@@ -274,6 +276,18 @@ var utag_data = {
 <p>Below is a complete list of changes for each release of the Cordova library. See the file <a href="https://github.com/Tealium/cordova-plugin/blob/master/CHANGELOG.md">CHANGELOG.md</a> for full list of changes.</p>
 
 <p class="note">It is strongly recommended that you remove and re-add the plugin from your project for the 1.1.1 release.</p>
+
+<h2 id="version-1-1-3">Version 1.1.3</h2>
+
+<ul>
+<li>Upgraded core libraries to latest versions.</li>
+</ul>
+
+<h2 id="version-1-1-2">Version 1.1.2</h2>
+
+<ul>
+<li>Fixed <a href="https://github.com/Tealium/cordova-plugin/issues/31">&ldquo;Diamond Operator&rdquo; issue</a></li>
+</ul>
 
 <h2 id="version-1-1-1">Version 1.1.1</h2>
 
@@ -1406,7 +1420,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  December 6, 2019 
+    <span>This page was last updated:  March 26, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
