Update from master branch
Update from master branch

--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -234,7 +234,7 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-9-0-1-9-3-2020">Version 1.9.0 - 1.9.3 (2020)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-9-0-1-9-4-2020">Version 1.9.0 - 1.9.4 (2020)</a></li>
               <li><a href="#version-1-70-1-8-2-2019">Version 1.70 - 1.8.2 (2019)</a></li>
               <li><a href="#version-1-50-1-6-7-2018">Version 1.50 - 1.6.7 (2018)</a></li>
               <li><a href="#version-1-1-3-1-4-0-2017">Version 1.1.3-1.4.0 (2017)</a></li>
@@ -276,7 +276,19 @@ var utag_data = {
 
 <p>Below is a complete list of changes for each release of the Swift library.</p>
 
-<h2 id="version-1-9-0-1-9-3-2020">Version 1.9.0 - 1.9.3 (2020)</h2>
+<h2 id="version-1-9-0-1-9-4-2020">Version 1.9.0 - 1.9.4 (2020)</h2>
+
+<h4 id="version-1-9-4">Version 1.9.4</h4>
+
+<p><strong>Released:</strong> April 2020</p>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<ul>
+<li>Fixed an issue affecting Carthage builds where the PLCrashReporter dependency caused a build failure on some platforms</li>
+<li>Fixed a bug where the remote commands module occasionally triggered commands multiple times if remote publish settings was enabled</li>
+<li>Fixed an issue where SwiftUI previews would fail if the library was installed via Swift Package Manager for any platform other than iOS</li>
+</ul>
 
 <h4 id="version-1-9-3">Version 1.9.3</h4>
 
@@ -2054,7 +2066,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  March 11, 2020 
+    <span>This page was last updated:  April 2, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
