--- a/platforms/remote-commands/integrations/braze/index.html
+++ b/platforms/remote-commands/integrations/braze/index.html
@@ -1662,8 +1662,8 @@ teal = Tealium(config: config) { responses <span style="font-weight:bold">in</sp
 	<div date-pref class="white">
 
 		
-			<a href="http://docs-preview.tealium.com/platforms/remote-commands/integrations/facebook/" title="Remote Command: Facebook">
-			Remote Command: Facebook <svg class="fill-current" height="18px" viewBox="0 0 18 18" width="18px" xmlns="http://www.w3.org/2000/svg"> <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path> <path d="M0 0h24v24H0z" fill="none"></path> </svg>
+			<a href="http://docs-preview.tealium.com/platforms/remote-commands/integrations/contentsquare/" title="Remote Command: Contentsquare">
+			Remote Command: Contentsquare <svg class="fill-current" height="18px" viewBox="0 0 18 18" width="18px" xmlns="http://www.w3.org/2000/svg"> <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path> <path d="M0 0h24v24H0z" fill="none"></path> </svg>
 
 			</a>
 		
