--- a/platforms/index.html
+++ b/platforms/index.html
@@ -5791,7 +5791,7 @@ var utag_data = {
 
     <div class="lh-copy mid-gray links">
       
-          Learn about remote commands, how they work, and how to install our vendor integrations.
+          Learn about remote commands, how they work, and how to install a vendor integration.
         
     </div>
     </a>
