--- a/platforms/ios-swift/data-layer/index.html
+++ b/platforms/ios-swift/data-layer/index.html
@@ -231,8 +231,7 @@ var utag_data = {
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
       <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#custom-data">Custom Data</a></li>
-              <ul class="toc-h3"><li><a href="#set-and-get-values">Set and Get Values</a></li>
-              <li><a href="#data-expiration">Data Expiration</a></li>
+              <ul class="toc-h3"><li><a href="#data-expiration">Data Expiration</a></li>
               <li><a href="#retrieve-all-data">Retrieve All Data</a></li>
               <li><a href="#clear-data">Clear Data</a></li>
               <li><a href="#examples">Examples</a></li>
@@ -291,8 +290,6 @@ var utag_data = {
 <p>It&rsquo;s common to need general data layer values on every event. To avoid having to add these values to every tracking call, use the <code>tealium.dataLayer</code> methods to persist data layer values that apply to all tracking calls. Once values are stored, they are automatically included in every tracked event.</p>
 
 <p class="note">Methods provided by <code>tealium.dataLayer</code> are able to read or write custom values, but do not have access to <a href="#module-data">module data</a>.</p>
-
-<h3 id="set-and-get-values">Set and Get Values</h3>
 
 <h3 id="data-expiration">Data Expiration</h3>
 
@@ -7031,7 +7028,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  August 17, 2020 
+    <span>This page was last updated:  October 22, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
