--- a/platforms/ios-swift/modules/index.html
+++ b/platforms/ios-swift/modules/index.html
@@ -317,8 +317,8 @@ var utag_data = {
 </tr>
 
 <tr>
-<td><code>DeviceData</code>*</td>
-<td><code>Collectors.DeviceData</code></td>
+<td><code>Device</code></td>
+<td><code>Collectors.Device</code></td>
 </tr>
 
 <tr>
@@ -499,7 +499,7 @@ config.dispatchers = [Dispatchers.Collect]                               </code>
 
 <ul>
 <li>AppData Collector</li>
-<li>DeviceData Collector</li>
+<li>Device Collector</li>
 <li>Lifecycle Collector</li>
 </ul>
 
@@ -6106,7 +6106,7 @@ config.dispatchers = [Dispatchers.Collect]                               </code>
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  July 28, 2020 
+    <span>This page was last updated:  October 21, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
