--- a/platforms/remote-commands/index.html
+++ b/platforms/remote-commands/index.html
@@ -5749,9 +5749,7 @@ var utag_data = {
           Remote Commands
         </h1>
         <div class=" mid-gray f5 f4-l">
-          <p>Remote commands is a feature of the Tealium iOS and Android libraries that allows native code to be triggered using Tealium iQ Tag Management.</p>
-
-<p>Remote commands works in conjunction with the TagBridge Custom Command tag and the third-party vendor SDK you wish to integrate into your app.</p>
+          <p>Remote commands is a feature of the Tealium iOS and Android libraries that allows native code to be triggered in a third-party vendor SDK.</p>
 
 <p class="note">If you&rsquo;re a partner looking to integrate with Tealium, visit <a href="/partners/mobile/">Partner Integrations</a>.</p>
 
