--- a/platforms/ios-swift/module-list/attribution/index.html
+++ b/platforms/ios-swift/module-list/attribution/index.html
@@ -347,9 +347,9 @@ var utag_data = {
 
 <p>In iOS 14+, apps are required to receive user permission to access the device&rsquo;s advertising identifier (IDFA). The user is prompted to grant &ldquo;Permission to track&rdquo; when the app launches for the first time. If the user declines, then the IDFA is not available to the app.</p>
 
-<p>When the IDFA is not available, <code>SKAdNetwork</code> provides a method for registered advertising networks to attribute app installs to a campaign by receiving a signed signal directly from Apple. The advertising network only receives confirmation that the app was successfully installed, along with the Campaign ID and optional Conversion Value.</p>
+<p>When the IDFA is not available, <code>SKAdNetwork</code> provides a method for registered advertising networks to attribute app installs to a campaign by receiving a signed signal directly from Apple. The advertising network only receives confirmation that the app was successfully installed, along with the campaign ID and optional conversion value.</p>
 
-<p>Learn more about <code>AppTrackingTransparency</code> and <code>SKAdNetwork</code> in the blog <a href="https://community.tealiumiq.com/t5/TLC-Blog/What-Do-Apple-s-IDFA-Changes-Mean-for-Tealium/ba-p/33770#toc-hId-1331108563">What Do Apple&rsquo;s IDFA Changes Mean for Tealium?</a>.</p>
+<p>Learn more about <code>AppTrackingTransparency</code> and <code>SKAdNetwork</code> in the blog <a href="https://community.tealiumiq.com/t5/TLC-Blog/What-Do-Apple-s-IDFA-Changes-Mean-for-Tealium/ba-p/33770#toc-hId-1331108563">What Do Apple&rsquo;s IDFA Changes Mean for Tealium?</a></p>
 
 <h3 id="apptrackingtransparency-att">AppTrackingTransparency (ATT)</h3>
 
