--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -290,7 +290,7 @@ var utag_data = {
 <li>Added the value of the <a href="https://developer.apple.com/documentation/apptrackingtransparency/attrackingmanager/authorizationstatus"><code>ATTrackingManager.AuthorizationStatus</code></a> to the dispatch payload as <code>device_tracking_authorization</code> if the <code>TealiumAttribution</code> module is enabled.</li>
 </ul>
 
-<p>Lean more about <a href="/platforms/ios-swift/module-list/attribution/#attribution-in-ios-14">Attribution in iOS 14+</a> and about support for <code>ATTransparency</code> and <code>SKAdNetwork</code>.</p>
+<p>Learn more about <a href="/platforms/ios-swift/module-list/attribution/#attribution-in-ios-14">Attribution in iOS 14+</a> and about support for <code>ATTransparency</code> and <code>SKAdNetwork</code>.</p>
 
 <h2 id="version-2-1-0-2020">Version 2.1.0 (2020)</h2>
 
