--- a/platforms/ios-objective-c/tvos/index.html
+++ b/platforms/ios-objective-c/tvos/index.html
@@ -285,6 +285,8 @@ var utag_data = {
 <div class="prose" id="prose">
   
 
+<p class="note">tvOS is no longer supported. The Tealium <a href="/platforms/ios-swift/">iOS (Swift)</a> library is recommended.</p>
+
 <h2 id="requirements">Requirements</h2>
 
 <ul>
@@ -6597,7 +6599,7 @@ Tealium <span style="font-weight:bold">*</span>tealiumInstance1 <span style="fon
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 20, 2020 
+    <span>This page was last updated:  February 4, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
