--- a/platforms/react-native-v1/install/index.html
+++ b/platforms/react-native-v1/install/index.html
@@ -312,6 +312,7 @@ var utag_data = {
 <ul>
 <li>Access to your native build environments</li>
 <li><a href="https://github.com/Tealium/tealium-react-native">React Native</a> and tools installed</li>
+<li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Tealium iQ Mobile Profile</a></li>
 <li><a href="https://developer.android.com/studio/">Android Studio</a> or <a href="https://developer.apple.com/xcode/">Xcode</a></li>
 <li><a href="/platforms/android-java/">Tealium for Android</a> or <a href="/platforms/ios-swift/">Tealium for iOS</a></li>
 </ul>
@@ -6607,7 +6608,7 @@ All initialization options are available with the method <a href="/platforms/rea
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 19, 2021 
+    <span>This page was last updated:  February 16, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
